--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,7 +6,7 @@ on:
 
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build-docs:
@@ -19,7 +19,10 @@ jobs:
       - run: |
           git fetch --prune --unshallow --tags
 
-      - name: Install requirements
+      - name: Install package
+        run: pip install .
+
+      - name: Install doc requirements
         run: pip install -r doc/requirements.txt
 
       - name: Build docs
