--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -18,7 +18,7 @@ jobs:
 
       matrix:
         os: [ubuntu-20.04]
-        python-version: [3.6, 3.9]
+        python-version: ["3.7", "3.10"]
         backend: [numpy, jax]
 
     steps:
@@ -31,7 +31,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Restore pip cache
         uses: actions/cache@v2
         id: pip-cache
