--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -18,7 +18,7 @@ jobs:
 
       matrix:
         os: [ubuntu-20.04]
-        python-version: ["3.7", "3.10"]
+        python-version: ["3.8", "3.11"]
         backend: [numpy, jax]
 
     steps:
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Restore pip cache
         uses: actions/cache@v2
         id: pip-cache
@@ -38,7 +39,7 @@ jobs:
           path: ~/.cache/pip
           key: ${{ matrix.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements*.txt') }}
           restore-keys: |
-            ${{ matrix.os }}-pip-
+            ${{ matrix.os }}-pip-${{ matrix.python-version }}-
 
       - name: Install dependencies
         run: |
