--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -19,6 +19,11 @@ jobs:
       - run: |
           git fetch --prune --unshallow --tags
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.12"
+
       - name: Install package
         run: pip install .
 
