--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -28,18 +28,10 @@ jobs:
       - run: git fetch --prune --unshallow --tags
 
       - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Restore pip cache
-        uses: actions/cache@v2
-        id: pip-cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ matrix.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements*.txt') }}
-          restore-keys: |
-            ${{ matrix.os }}-pip-${{ matrix.python-version }}-
+          cache: pip
 
       - name: Install dependencies
         run: |
